--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.6.0",
     "react-intersection-observer": "^9.16.0",
     "react-slick": "^0.30.3",
